@@ -272,7 +272,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 		} else {
 			displayInt = this.getDefaultDisplay();
 		}
-		d = new Integer(displayInt);
+		d = Integer.valueOf(displayInt);
 		this.iDisplay = d;
 		return displayInt;
 	}
@@ -445,9 +445,9 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 
 		Integer superscript = null;
 		if (isSuper) {
-			superscript = new Integer(1);
+			superscript = Integer.valueOf(1);
 		} else if (isSub) {
-			superscript = new Integer(-1);
+			superscript = Integer.valueOf(-1);
 		}
 		if ((superscript == null) && (prs != null)) {
 			superscript = (Integer) prs.getFont().getAttributes().get(TextAttribute.SUPERSCRIPT);
@@ -881,7 +881,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 			while (counterArray.size() <= nesting) {
 				counterArray.add(null);
 			}
-			counterArray.set(nesting, new Integer(value));
+			counterArray.set(nesting, Integer.valueOf(value));
 		}
 	}
 
@@ -911,7 +911,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 		}
 		Integer integer = (Integer) counterArray.get(nesting);
 		int prevValue = integer == null ? 0 : integer.intValue();
-		counterArray.set(nesting, new Integer(prevValue + 1));
+		counterArray.set(nesting, Integer.valueOf(prevValue + 1));
 		return prevValue;
 	}
 
@@ -941,7 +941,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 				}
 				
 				if((backgroundText.startsWith(ColorFactory.RGB_START) || 
-						backgroundText.startsWith(ColorFactory.RGB_START)) && backgroundText.endsWith(")")){
+						backgroundText.startsWith(ColorFactory.RGBA_START)) && backgroundText.endsWith(")")){
 					binfo.setBackgroundColor(ColorFactory.getInstance().getColor(backgroundText));
 				} else {
 
@@ -1108,7 +1108,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 				wsValue = WS_NORMAL;
 			}
 		}
-		this.iWhiteSpace = new Integer(wsValue);
+		this.iWhiteSpace = Integer.valueOf(wsValue);
 		return wsValue;
 	}
 	
@@ -1345,7 +1345,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 				}
 			}
 		}
-		this.cachedVisibility = new Integer(visibility);
+		this.cachedVisibility = Integer.valueOf(visibility);
 		return visibility;
 	}
 	
@@ -1396,7 +1396,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 				}
 			}
 		}
-		this.cachedPosition = new Integer(position);
+		this.cachedPosition = Integer.valueOf(position);
 		return position;
 	}
 	
@@ -1441,7 +1441,7 @@ public class StyleSheetRenderState implements RenderState,CSSValuesProperties {
 				}
 			}
 		}
-		this.cachedFloat = new Integer(floatValue);
+		this.cachedFloat = Integer.valueOf(floatValue);
 		return floatValue;
 	}
 
