@@ -155,7 +155,7 @@ public class XPathResultImpl implements XPathResult, EventListener {
 		// Check that the type is valid
 		if (!isValidType(type)) {
 			String fmsg = XPATHMessages.createXPATHMessage(XPATHErrorResources.ER_INVALID_XPATH_TYPE,
-					new Object[] { new Integer(type) });
+					new Object[] { Integer.valueOf(type) });
 			throw new XPathException(XPathException.TYPE_ERR, fmsg); // Invalid
 																		// XPath
 																		// type
